--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "js/library/tartJS"]
-	path = js/library/tartJS
+[submodule "third_party/tartJS"]
+	path = third_party/tartJS
 	url = git://github.com/tart/tartJS.git
